...
/// where the first age corresponds to the first dose, the second age to the second dose, etc.
///
/// Note: The dose of a vaccine corresponds to the index of each due-at-age. Ergo, to determine if a particular doseNumber exists,
/// check if it is within the length of the list for the particular vaccine. Likewise, to determine if a particular vaccineCode exists,
/// check if the key exists in the NIP map
final Map<String, List<DayDuration>> nipCatalogue = Map.unmodifiable({
  'BCG': [DayDuration()],
  'PENTA': [
    DayDuration(weeks: 6),
    DayDuration(weeks: 10),
    DayDuration(weeks: 14)
  ],
  'BOPV': [
...
